Working on content for Audio Settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/test.test
 GlobalDefaultGameMode="/Script/CommandAndConquer.CommandAndConquerGameMode"
+GameInstanceClass=/Game/MyCnCGameInstance.MyCnCGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
