+Added assets for Temple Nod and Missile +Created gamemodes for singleplayer and MultiPlayer +Created and working on windows for the multiplayer +Created lobby data structures for networking +Created StructTypes.h to hold structs in the same way EnumTypes.h handles enums +Created the base class for superweapons that derives from buildings +Created the first superweapon being NOD's Temple Of Nod - a temple that fires nukes.
*Started replicating some data in certain classes to prepare for networking.
*Setup the DefaultEngine.ini to set the default subsystem to null - for LAN networking.

Notes:
Almost done modeling all the NOD and Global buildings. I don't think I'll put a lot of effort into texturing them other than giving proper UVs so that I could setup faction colors.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/test.test
 GlobalDefaultGameMode="/Script/CommandAndConquer.CommandAndConquerGameMode"
-GameInstanceClass=/Game/MyCnCGameInstance.MyCnCGameInstance_C
+GameInstanceClass=/Game/BP_CnCGameInstance.BP_CnCGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
@@ -80,6 +80,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=True
 RuntimeGeneration=Dynamic
+bSortNavigationAreasByCost=False
+bDoFullyAsyncNavDataGathering=True
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
@@ -98,6 +100,16 @@ CustomScalingRuleClass=None
 UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
 bAllowHighDPIInGameMode=False
 bLoadWidgetsOnDedicatedServer=True
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+DirtyAreasUpdateFreq=60.000000
+
+[/Script/AIModule.AISystem]
+PathfollowingNavLinkAcceptanceRadius=5.000000
+
+[OnlineSubsystem]
+DefaultPlatformService=Null
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
