A lot of changes

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -50,6 +50,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="ScrollIn",Scale=-1.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="MiniMapZoom",Scale=1.000000,Key=Add)
++AxisMappings=(AxisName="MiniMapZoom",Scale=-1.000000,Key=Subtract)
 DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
