Cleaned up menus, configured singleplayer gamemode.

--- a/CommandAndConquer.uproject
+++ b/CommandAndConquer.uproject
@@ -30,6 +30,11 @@
 			"Name": "HorizonUIPlugin",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/8b94d073d32443b497d4a9e8b1e210f7"
+		},
+		{
+			"Name": "ElectronicNodes",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/5cb2a394d0c04e73891762be4cbd7216"
 		}
 	]
 }
