--- a/CommandAndConquer.uproject
+++ b/CommandAndConquer.uproject
@@ -18,7 +18,7 @@
 	"Plugins": [
 		{
 			"Name": "ST_ExportPNG",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/230db584ce5749f284945d3286c745fa"
 		},
 		{
